integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_owners_by_asset-show-zero-balance-true-and-paging.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 2,
  "page": 2,
  "owners": [
    {
      "id": "GLGgL7sVv4pzP3qXfqfmfyj8BbedmK6Eqp4qKMgnaesR",
      "associated_token_address": "Gm9koEU32UJLsTxJxtdFt7yMd6fbztpk8DVNBLM7TQV8"
    }
  ]
}
