integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_token_accounts_by_mint-before-token.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 2,
  "limit": 1000,
  "token_accounts": [
    {
      "address": "A35gLorchY5NLkceVC2Vhu881h6hYbpyjMTRQFoJAmKu",
      "mint": "mSoLzYCxHdYgdzU16g5QSh3i5K3z3KZK7ytfqcJm7So",
      "owner": "4ertZug8cEznSaRLeNaYKyzwSbryBcPv951W1q5LXp7z",
      "amount": 2,
      "delegate": "83ZLqpvwvUUdFLtS1McXpjjuZufKtrnbmg5zkQprGV68",
      "delegated_amount": 2,
      "frozen": false
    },
    {
      "address": "A7hHRV3gksmQUvvbPx1phXvapVBGgGeAnfQ1zASX3zup",
      "mint": "mSoLzYCxHdYgdzU16g5QSh3i5K3z3KZK7ytfqcJm7So",
      "owner": "9Ytyvs3LA5ebVtCD8UMmQabKkm9VuPNHYWiBvFTAe9k1",
      "amount": 200467,
      "delegated_amount": 0,
      "frozen": false
    }
  ]
}
