integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_token_accounts_by_mint-cursor-mint-1.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 1,
  "cursor": "A35gLorchY5NLkceVC2Vhu881h6hYbpyjMTRQFoJAmKu",
  "token_accounts": [
    {
      "address": "A35gLorchY5NLkceVC2Vhu881h6hYbpyjMTRQFoJAmKu",
      "mint": "mSoLzYCxHdYgdzU16g5QSh3i5K3z3KZK7ytfqcJm7So",
      "owner": "4ertZug8cEznSaRLeNaYKyzwSbryBcPv951W1q5LXp7z",
      "amount": 2,
      "delegate": "83ZLqpvwvUUdFLtS1McXpjjuZufKtrnbmg5zkQprGV68",
      "delegated_amount": 2,
      "frozen": false
    }
  ]
}
