integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_token_accounts_by_mint-owner-and-mint.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 2,
  "limit": 1000,
  "cursor": "93Jv6HSpwHMwiwSQHG24SJ3c3PcMjgvJpK27dR62GLmK",
  "token_accounts": [
    {
      "address": "6TXyfVhR91BSSgQqtYSt2TcBDi7knPdCbjebwn3KuTvX",
      "mint": "So11111111111111111111111111111111111111112",
      "owner": "5Q544fKrFoe6tsEbD7S8EmxGTJYAKtTVhAW5Q5pge4j1",
      "amount": 10425313747,
      "delegated_amount": 0,
      "frozen": false
    },
    {
      "address": "93Jv6HSpwHMwiwSQHG24SJ3c3PcMjgvJpK27dR62GLmK",
      "mint": "So11111111111111111111111111111111111111112",
      "owner": "5Q544fKrFoe6tsEbD7S8EmxGTJYAKtTVhAW5Q5pge4j1",
      "amount": 5868051234,
      "delegated_amount": 0,
      "frozen": false
    }
  ]
}
